# crid

./: .gitignore  LICENSE  README.md  main.py  mifare_access_keys_top100.lst  pyproject.toml  requirements.txt
crid/modules/: cli.py
